Kubernetes-Manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier
  labels:
    name: three-tier
    environment: production
